...
                            <constraint firstItem="vAl-zg-1LT" firstAttribute="top" secondItem="7XW-20-PCo" secondAttribute="top" constant="30" id="gmk-vt-Djc"/>
                            <constraint firstItem="7XW-20-PCo" firstAttribute="bottom" secondItem="vAl-zg-1LT" secondAttribute="bottom" id="m6U-WA-em2"/>
                            <constraint firstItem="MTu-6J-IGr" firstAttribute="leading" secondItem="7XW-20-PCo" secondAttribute="leading" constant="10" id="qhv-md-0kc"/>
                            <constraint firstItem="vAl-zg-1LT" firstAttribute="leading" secondItem="7XW-20-PCo" secondAttribute="leading" id="vc3-PO-Ju3"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="History" image="archivebox" catalog="system" id="Gyt-4b-ufJ"/>
                    <connections>
                        <outlet property="noHistoryLbl" destination="MTu-6J-IGr" id="kgg-aD-BPZ"/>
                        <outlet property="tableView" destination="vAl-zg-1LT" id="rXe-s9-cml"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="c4j-4J-b3F" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="cW5-rj-YTt">
                                <rect key="frame" x="188.5" y="410" width="37" height="37"/>
                                <color key="color" systemColor="tintColor"/>
                            </activityIndicatorView>
                            <searchBar contentMode="redraw" placeholder="Search photo here..." showsCancelButton="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qCd-hl-3eG">
                                <rect key="frame" x="0.0" y="44" width="414" height="51"/>
                                <textInputTraits key="textInputTraits"/>
                                <scopeButtonTitles>
                                    <string>Title</string>
                                    <string>Title</string>
                                </scopeButtonTitles>
...
                            <constraint firstItem="DQc-yD-bRs" firstAttribute="top" secondItem="qCd-hl-3eG" secondAttribute="bottom" constant="-7" id="WGa-qI-L1G"/>
                            <constraint firstItem="s3Q-lr-zYx" firstAttribute="bottom" secondItem="DQc-yD-bRs" secondAttribute="bottom" id="YoC-0F-OfY"/>
                            <constraint firstItem="s3Q-lr-zYx" firstAttribute="trailing" secondItem="DQc-yD-bRs" secondAttribute="trailing" id="a2M-aM-0b4"/>
                            <constraint firstItem="cW5-rj-YTt" firstAttribute="centerY" secondItem="s3Q-lr-zYx" secondAttribute="centerY" id="xBS-a3-vDF"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Search" image="magnifyingglass" catalog="system" id="rqL-0e-pWo"/>
                    <connections>
                        <outlet property="collectionView" destination="DQc-yD-bRs" id="teY-mF-LKF"/>
                        <outlet property="loadingIndicator" destination="cW5-rj-YTt" id="1E6-ph-nOG"/>
                        <outlet property="searchBar" destination="qCd-hl-3eG" id="gPR-6n-upx"/>
                    </connections>
                </viewController>
...
